--- a/style.css
+++ b/style.css
@@ -1,29 +1,37 @@
+
 .container {
   height:100vh;
 }
+body, table, #Matrix, .container,.nameOfGame{
+  background-image: url("DinerDeath.png");
+}
 
 #Matrix{
-    margin: 0 auto;
-    padding-left: 5%;
-    padding-right: 5%;
-    padding-bottom: 5%;
+  margin: 0 auto;
+  padding-left: 5%;
+  padding-right: 5%;
+  padding-bottom: 5%;
 }
 
 .nameOfGame {
-    font-family:'Amatic SC', cursive;
-    font-size: 100px;
-    text-align: center;
-    }
+  font-family: 'Grand Hotel', cursive;
+  color: rgba(47,14,8,.7);
+  font-size: 100px;
+  font-weight: bolder;
+  text-align: center;
+
+}
 
 .button {
-    width:200px;
-    height: 200px;
-    border: 5px black solid;
-    }
+  width:200px;
+  height: 200px;
+  border: 5px solid;
+}
 th {
-    font-family:'Amatic SC', cursive;
-    font-size: 30px;
-    }
+  font-family: 'Grand Hotel', cursive;
+  color: rgba(47,14,8,.7);
+  font-size: 30px;
+}
 
 .A.xclaimed {background-image: url("ImgTic/x.jpg");}
 .B.xclaimed{background-image: url("ImgTic/x1.jpg");}
@@ -44,4 +52,4 @@ th {
 .F.oclaimed{background-image: url("ImgTic/o6.jpg");}
 .G.oclaimed{background-image: url("ImgTic/o7.jpg");}
 .H.oclaimed{background-image: url("ImgTic/o8.jpg");}
-.I.oclaimed{background-image: url("ImgTic/o9.8jpg");}
+.I.oclaimed{background-image: url("ImgTic/o9.jpg");}
